--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -5,7 +5,7 @@
       <img src="https://lolitajoias.com.br/wp-content/uploads/2020/09/no-image.jpg" alt="">
     </div>
     <div class="small-card__title">
-      <h1>AAAAGH! MY BALLS!</h1>
+      <h1>SMALL CARD COMPONENT</h1>
     </div>
   </div>
 
