--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="big-card__title">
-    <h1><a href="#"> SOMEONE STEPPED ON MY BALLS </a></h1>
+    <h1><a href="#"> SITE UNDER CONSTRUCTION </a></h1>
   </div>
 
   <div class="big-card__description">
