adicionando funcionalidades Angular

--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -2,10 +2,10 @@
 
   <div class="container__small-card-content">
     <div class="small-card__photo">
-      <img src="https://lolitajoias.com.br/wp-content/uploads/2020/09/no-image.jpg" alt="">
+      <img src="{{ photoCover }}" alt="">
     </div>
     <div class="small-card__title">
-      <h1>SMALL CARD COMPONENT</h1>
+      <h1>{{ cardDescription }}</h1>
     </div>
   </div>
 
