--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,22 +1,16 @@
 <div class="container__big-card">
   <div class="big-card__photo">
-    <img src="https://lolitajoias.com.br/wp-content/uploads/2020/09/no-image.jpg"
-    alt=""
+    <img src="{{ photoCover }}"
+    alt= ""
     >
   </div>
 
   <div class="big-card__title">
-    <h1><a href="#"> SITE UNDER CONSTRUCTION </a></h1>
+    <h1><a href="#"> {{ cardTitle }} </a></h1>
   </div>
 
   <div class="big-card__description">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor
-      volutpat lectus. Integer molestie diam quam, nec consequat est tempor
-      nec. Donec varius massa in finibus porttitor. Morbi ornare neque
-      lectus, ut malesuada lectus dignissim eget. Nam congue finibus sem,
-      id auctor tellus pretium placerat. Ut in hendrerit risus. Nam urna nunc,
-      molestie nec nisl pretium, elementum feugiat lorem. Suspendisse vestibulum
-      quis odio quis imperdiet.</p>
+    <p>{{ cardDescription }}</p>
   </div>
 
 </div>
