--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -10,11 +10,20 @@
   flex-direction: row;
 }
 
-.small-card__photo >img {
+.small-card__photo {
   width: 100px;
-  height: 100%;
+  height: 100px;
 
   margin-right: 20px;
+
+}
+
+.small-card__photo >img {
+  width: 100px;
+  height: 100px;
+
+
+
 }
 
 .small-card__title{
